add tactile rose

--- a/orca_hand_control/package.xml
+++ b/orca_hand_control/package.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>orca_hand_control</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Hand control with tactile sensor integration</description>
   <maintainer email="hujunem95@gmail.com">juu</maintainer>
   <license>TODO: License declaration</license>
 
+  <buildtool_depend>ament_python</buildtool_depend>
+
+  <!-- Dependencies -->
+  <exec_depend>orca_msgs</exec_depend>
+  <exec_depend>orca_core</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>builtin_interfaces</exec_depend>
+  <exec_depend>orca_msgs</exec_depend>
+
+  <!-- Tests -->
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-
-  <buildtool_depend>ament_python</buildtool_depend>
-
-  <exec_depend>orca_core</exec_depend>
-  <exec_depend>rclpy</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
